fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 
 body {
   padding-right: 0 !important;
-  overflow: visible !important;
+  // overflow: visible !important;
   color: #333;
   overflow-x: hidden;
   font-family: 'Nunito Variable', 'Roboto Mono Variable', sans-serif;
